--- a/css/index.css
+++ b/css/index.css
@@ -69,11 +69,11 @@ nav ul li a:hover {
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 8px;
-    box-shadow: 10px 10px 30px rgba(255, 255, 255, 0.5);
+    box-shadow: 10px 10px 20px rgba(255, 255, 255, 0.9);
     position: relative;
     backdrop-filter: blur(5px);
     width: 100%;
-    max-width: 300px;
+    max-width: 400px;
 }
 
 .box h2 {
@@ -81,29 +81,41 @@ nav ul li a:hover {
     margin-bottom: 10px;
 }
 
+.logos {
+    width: 50px;
+    bottom: 20px;
+    right: 20px;
+    float: right;
+    
+}
+
 .dns {
-    grid-column: 1; /* Posiciona la caja DNS en la primera columna */
-    grid-row: 2;    /* Posiciona la caja DNS en la segunda fila */
+    grid-column: 1/2; /* Posiciona la caja DNS en la primera columna */
+    grid-row: 1/5;    /* Posiciona la caja DNS en la segunda fila */
     border-top: 5px solid red;
+    background-color: rgba(255, 255, 255, 0.505);
 }
 
 .html {
     grid-column: 2; /* Posiciona la caja HTML en el centro */
-    grid-row: 1; /* Hace que ocupe desde la fila 1 a la fila 3 (centrada verticalmente) */
-    border-top: 5px solid purple;
-    background-color: rgba(213, 39, 202, 0.1);
+    grid-row: 1/3; /* Hace que ocupe desde la fila 1 a la fila 3 (centrada verticalmente) */
+    border-top: 5px solid rgb(223, 51, 223);
+    background-color: rgba(220, 24, 251, 0.505);
 }
+
 
 .tcpip {
     grid-column: 3; /* Posiciona la caja TCP/IP en la tercera columna */
-    grid-row: 2;    /* Posiciona la caja TCP/IP en la segunda fila */
-    border-top: 5px solid darkred;
+    grid-row: 1/5;    /* Posiciona la caja TCP/IP en la segunda fila */
+    border-top: 5px solid rgb(0, 213, 255);
+    background-color: rgba(173, 19, 19, 0.505);
 }
 
 .css {
     grid-column: 2; /* Posiciona la caja CSS en la segunda columna */
-    grid-row: 3;    /* Posiciona la caja CSS en la tercera fila */
+    grid-row: 3/3;    /* Posiciona la caja CSS en la tercera fila */
     border-top: 5px solid blue;
+    background-color: rgba(1, 221, 255, 0.505);
 }
 
 footer {
