--- a/css/pareshtml.css
+++ b/css/pareshtml.css
@@ -26,8 +26,8 @@ header {
 
 header h1 {
     font-size: 2.5em;
-    margin-bottom: 5px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+    margin-bottom: 10px;
+    text-shadow: 5px 5px 20px rgb(254, 250, 250);
 }
 
 .subtitle {
@@ -65,12 +65,14 @@ nav ul li a:hover {
 
 .content {
     padding: 20px;
-    background-color: rgba(128, 0, 128, 0.7); /* Color púrpura con transparencia */
+    background-color: rgba(128, 0, 128, 0.4); /* Color púrpura con transparencia */
     border-radius: 8px;
     position: relative;
     backdrop-filter: blur(5px);
     display: inline-block;
-    max-width: 800px;
+    max-width: 1000px;
+    box-shadow: 10px 10px 30px rgba(247, 245, 245, 0.8);
+    border-top: 10px solid #ff99ff;
 }
 
 .html-box h2 {
@@ -86,9 +88,10 @@ nav ul li a:hover {
 
 .logo {
     width: 50px;
-    position: absolute;
     bottom: 20px;
     right: 20px;
+    float: right;
+    
 }
 
 footer {
