--- a/css/parescss.css
+++ b/css/parescss.css
@@ -52,7 +52,7 @@ nav ul {
 
 nav ul li a {
     text-decoration: none;
-    color: white;
+    color: yellow;
     font-size: 1.2em;
     background-color: rgba(0, 0, 255, 0.3);
     padding: 10px 20px;
